styles.css
*,*:before,*:after{
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	transition: all 0.3s;
}

:root{
	--green: #008248;
	--darkgreen: #1e3932;
	--white-sort-of: #f1f8f6;
	--light-blue: #d4e9e2;
	--white-dirty: #f3f1e7;
	--black: #000;
}

body{
	width: 100%;
	font-family: 'Poppins', sans-serif;
}

header{
	position: sticky;
	z-index: 2;
	background-color: white;
	padding: 17px 25px 17px 17px;
	box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.25);
	-webkit-box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.25);
	-moz-box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.25);
}

header, #top-menu>div, .dropdown-divs, #middle-menu, #bottom-menu, #nav2-header{	
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
}

.text-area, #note, .hidden-div, #sfd, #top-menu,  #nav2-other{
	display: flex;
	flex-direction: column;
	align-items: center;
}

header>ion-icon{
	font-size: 30px;
}

#logo{
	width: 40px;
}

#main{
	padding-top: 30px;
	background-color: white;
}

nav, nav2{
	display: block;
	position: fixed;
	z-index: 1;
	top: 74px;
	right: 0;
	bottom: 0;
	background-color: white;
	width: 80%;
	padding: 2.8rem 1.8rem;
	margin-right: -80%;
}

@keyframes flyIn{
	100%{
		margin-right: 0%;
	}
}

@keyframes flyOut{
	0%{
		margin-right: 0%;
	}

	100%{
		margin-right: -80%;
	}
}

#top-menu>*{
	margin-bottom: 2.2rem;
	width: 100%;
}

#top-menu{	
	align-items: flex-start;
	font-size: 1.1rem;
	border-bottom: 2px solid hsl(0, 0%, 88%);
}

#top-menu > div{
	cursor: pointer;
}

#middle-menu{
	margin: 2rem 0 1rem;
	width: 185px;
}

#middle-menu>*{
	border: 1px solid var(--black);
	border-radius: 20px;
	padding: 0.25rem 0.9rem;
	font-weight: 600;
	font-size: 0.85rem;
}

#middle-menu>a:nth-child(2){
	background-color: var(--black);
	color: white;
}

#bottom-menu{
	justify-content: flex-start;
	font-weight: 600;
	font-size: 0.85rem;
}

#bottom-menu:hover{
	color: green;
}

#li{
	font-size: 1.3rem;
	padding-right: 0.5rem;
}
nav2{
	padding: 0;
}

nav2, #nav2-other{
	padding-top: 0;
	align-items: flex-start;
}

#nav2-header{
	padding: 1rem 40% 1rem 1.8rem;
	background-color: hsl(0, 0%, 98%);
	cursor: pointer;
}

#nav2-header>p{
	font-weight: 500;
	font-size: 1.1rem;
}

#nav2-other{
	padding: 0 1.8rem;
}

#nav2-other>*{
	padding: 1.1rem 0;
	font-size: 1.1rem;
}

nav ion-icon, nav2 ion-icon{
	font-size: 1.3rem;
}


#latte, #uber, #card, #black, #note{
	margin-top: 30px;
}

#latte{
	background-color: var(--darkgreen);
	color: white;
	margin-top: 0;
}

.text-area, #note{
	padding: 1.3rem 1.1rem 2rem;
	text-align: center;
	justify-content: center;
}

#latte-image, #ue, #card-img, #black-guy{
	max-width: 100%;
	height: auto;
}

.text-area h2{
	font-weight: 600;
	letter-spacing: 1px;
	font-size: 1.6rem;
}

#latte p{
	font-size: 1.25rem;
	font-weight: 500;
	line-height: 2rem;
	margin: 1.3rem 0 2.3rem;
}

.main-links{
	border: 1px solid white;
	border-radius: 20px;
	padding: 0.25rem 1rem;
	text-decoration: none;
	color: white;
	font-weight: 500;
	font-size: 0.9rem;
}

#uber, #card, #black{
	background-color: var(--light-blue);
	color: var(--darkgreen);
}

#uta>h2{
	font-weight: 700;
	line-height: 1.9rem;
	letter-spacing: 1.5px;
}

#uta>p{
	font-size: 1.3rem;
	margin: 1.8rem 0;
}

#uta>a, #cta>a{
	border-color: var(--darkgreen);
	color: var(--darkgreen);
}

#cta>h2{
	font-size: 1.23rem;
}

#cta>p, #bta>p{
	margin: 1.7rem 0;
	font-size: 0.92rem;
	line-height: 1.75rem;
}

#bta>*{
	color: var(--black);
}

#bta>a{
	border-color: var(--black);
}

#note{
	margin-top: 2.5rem;
	font-size: 0.78rem;
	line-height: 1.5rem;
	border-bottom: 2px solid hsl(0, 0%, 88%);
}

.links{
	text-decoration: none;
	color: var(--black);
}

.hidden-div{
	position: sticky;
	align-items: flex-start;
	/*height: 0px;*/
	z-index: -1;
	visibility: hidden;
}

.hidden-div>a{
	color: gray;
	font-size: 0.9rem;
	margin-top: 1.4rem;
}

.hidden-div>a:hover{
	color: black;
}

.hidden-div a:nth-child(1){
	margin-top: 0.5rem;
}

.above-footer, footer{
	margin: 1.4rem 1.2rem 0;
	padding-bottom: 1rem;
	border-bottom: 2px solid hsl(0, 0%, 88%);
	background-color: white;
}

.dropdown-divs{
	position: relative;
	padding: 0.6rem 0;
	margin: 0.7rem 0;
	cursor: pointer;
	background-color: white;
}

.toggle{
	font-size: 1.5rem;
	padding: 0.5rem;
	border-radius: 50%;
}

.toggle:hover{
	background-color: hsl(0, 0%, 90%);
	cursor: pointer;
}


footer{
	padding-top: 2.2rem;
	margin-bottom: 2.2rem;
	margin-top: 0;
	border: none;
}

[alt="spotify logo"]{
	width: 1.9rem;
}

[name^="logo-"]{
	font-size: 2rem;
	margin-left: 0.35rem;
}

#sfd{
	align-items: flex-start;
	font-size: 0.9rem;
	margin: 1.7rem 0 1.1rem;
}

#sfd .links{
	margin-bottom: 1rem;
}

footer>p{
	font-size: 0.8rem;
	color: hsl(0, 0%, 50%);
}

